syntax = "proto3";

package image;

option go_package = "github.com/nekizz/final-project/backend/go-pbtype/image";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";


// Enable custom Marshal method.
option (gogoproto.marshaler_all) = true;
// Enable custom Unmarshal method.
option (gogoproto.unmarshaler_all) = true;
// Enable custom Size method (Required by Marshal and Unmarshal).
option (gogoproto.sizer_all) = true;
// Enable registration with golang/protobuf for the grpc-gateway.
option (gogoproto.goproto_registration) = true;
// Enable generation of XXX_MessageName methods for grpc-go/status.
option (gogoproto.messagename_all) = true;

message Image {
  int32 id = 1;
  string url = 2;
  string type = 3;
  int32 hotel_id = 4;

  string created_at = 20;
  string updated_at = 21;
}